--- a/frw/pom.xml
+++ b/frw/pom.xml
@@ -13,5 +13,14 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+<distributionManagement>
+		<repository>
+			<id>nexus-aliyun</id>
+			<name>releases</name>
+			<url>http://127.0.0.1:8081/nexus/content/repositories/releases/</url>
+		</repository>
+	</distributionManagement>
+
 </project>
 
