修改配置文件

--- a/dtbs-frw/dtbs-frw-parent/pom.xml
+++ b/dtbs-frw/dtbs-frw-parent/pom.xml
@@ -3,7 +3,7 @@
   <groupId>cn.dtbs.frw</groupId>
   <artifactId>frw-parent</artifactId>
   <version>1.0.0</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
   <name>frw-parent</name>
   
   <properties>
