修改配置文件

--- a/dtbs-frw/dtbs-frw-plugin/pom.xml
+++ b/dtbs-frw/dtbs-frw-plugin/pom.xml
@@ -9,6 +9,7 @@
     	<groupId>cn.dtbs.frw</groupId>
     	<artifactId>frw-parent</artifactId>
     	<version>1.0.0</version>
+		<relativePath></relativePath>
     </parent>
 	<dependencies>
 
