--- a/dtbs-web/pom.xml
+++ b/dtbs-web/pom.xml
@@ -4,21 +4,32 @@
 	<groupId>cn.dtbs.web</groupId>
 	<artifactId>dtbs-web</artifactId>
 	<version>1.0.0</version>
-	<packaging>war</packaging>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>4.2.4.RELEASE</spring.version>
-		<hibernate.version>5.0.5.Final</hibernate.version>
-		<shiro.version>1.2.4</shiro.version>
-		<jackson.version>1.9.13</jackson.version>
-		<fasterxml.jackson.version>2.6.3</fasterxml.jackson.version>
-		<ehcache.version>2.6.11</ehcache.version>
-		<maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>  
-        <timestamp>${maven.build.timestamp}</timestamp> 
-        <xSimple.version>1.0.8-beta</xSimple.version>
-        <spring-data-jpa.version>1.7.0.RELEASE</spring-data-jpa.version>
-	</properties>
+	<packaging>jar</packaging>
+
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.4.RELEASE</version>
+	</parent>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.10.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
 	</dependencies>
 	<build>
 	</build>
