--- a/dtbs-web/pom.xml
+++ b/dtbs-web/pom.xml
@@ -31,6 +31,25 @@
 			<version>4.12</version>
 		</dependency>
 	</dependencies>
+
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<!--这里写上main方法所在类的路径-->
+				<configuration>
+					<mainClass>com.config</mainClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
+
 </project>
