--- a/dtbs-web/pom.xml
+++ b/dtbs-web/pom.xml
@@ -39,7 +39,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<!--这里写上main方法所在类的路径-->
 				<configuration>
-					<mainClass>com.config</mainClass>
+					<mainClass>com.config.Application</mainClass>
 				</configuration>
 				<executions>
 					<execution>
